# Research-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
config/: settings.yaml  sources.yaml
examples/: sample-digest.md
prompts/: compress-digest.md  digest-intro.md  summarize-blogs.md  summarize-paper.md  summarize-podcast.md  summarize-tweets.md  translate.md
scripts/: crontab.example  run-digest.sh
src/research_digest/config/: loader.py  schema.py  secret_env.py  sources_schema.py
src/research_digest/delivery/: deliver.py  formatter.py  telegram_client.py
src/research_digest/entrypoints/: cli.py
src/research_digest/models/: digest.py  source_item.py
src/research_digest/observability/: artifact_store.py  logger.py  run_context.py
src/research_digest/pipeline/: dedupe_stage.py  digest_pipeline.py
src/research_digest/ranking/: filter_rules.py  ranker.py  scoring.py
src/research_digest/sources/: base.py  biorxiv_source.py  factory.py  pubmed_source.py  rss_source.py
src/research_digest/storage/: history_store.py
src/research_digest/summarization/: digest_artifact.py  llm_client.py  (+3 more)
tests/: test_artifact_store.py  test_biorxiv_source.py  test_config_loader.py  test_dedupe_stage.py  test_deliver.py  test_digest_artifact.py  test_factory.py  test_filter_rules.py  test_formatter.py  test_history_store.py  test_observability_switches.py  test_pipeline.py  test_prune_history.py  test_pubmed_source.py  test_ranker.py  test_rss_source.py  test_run_context.py  test_scoring.py  test_sources_schema.py  test_summarizer.py  test_telegram_client.py
